# snake_in_c

./: CMakeLists.txt  LICENSE  main.c  snake_methods.c  snake_methods.h
